# Doxa

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  grafana_dashboard.json  main.py  manifest.yaml  params.yaml  postman_performance.json  pyproject.toml  requirements.txt  setup.py  test_environment.py
.dvc/: config
.github/workflows/: cicd.yaml
app/: app.py  main.py
app/static/css/: style.css
app/templates/: index.html  index_fastapi.html
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore
notebooks/: baseline_experiment.ipynb  bow_tfidf_experiment.ipynb  cosim_hyparam_experiment.ipynb  lor_hyparam_experiment.ipynb  lor_hyperparam_experiment.ipynb
src/configuration/: aws_connection.py
src/constants/: __init__.py
src/data/: data_ingestion.py  data_preprocessing.py  make_dataset.py
src/entity/: artifact_entity.py  config_entity.py
src/features/: feature_engineering.py
src/model/: model_evaluation.py  model_promotion.py  model_registration.py  model_training.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py
src/utils/: main_utils.py
tests/: app_tests.py  model_tests.py
