[project]
name = "doxa"
version = "0.1.0"
description = "An end to end MLOps pipeline for Movie Reviews Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore",
    "aiohappyeyeballs",
    "aiohttp",
    "aiohttp-retry",
    "aioitertools",
    "aiosignal",
    "alembic",
    "amqp",
    "annotated-doc",
    "annotated-types",
    "antlr4-python3-runtime",
    "anyio",
    "appdirs",
    "appnope",
    "asttokens",
    "async-timeout",
    "asyncssh",
    "atpublic",
    "attrs",
    "awscli",
    "backoff",
    "beautifulsoup4",
    "billiard",
    "bleach",
    "blinker",
    "boto3",
    "botocore",
    "cachetools",
    "celery",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "click-didyoumean",
    "click-plugins",
    "click-repl",
    "cloudpickle",
    "colorama",
    "colorlog",
    "comm",
    "configobj",
    "contourpy",
    "cryptography",
    "cycler",
    "dacite",
    "dagshub",
    "dagshub-annotation-converter",
    "databricks-sdk",
    "dataclasses-json",
    "debugpy",
    "decorator",
    "defusedxml",
    "dictdiffer",
    "dill",
    "diskcache",
    "distro",
    "docker",
    "docutils",
    "dotenv",
    "dpath",
    "dulwich",
    "dvc",
    "dvc-data",
    "dvc-http",
    "dvc-objects",
    "dvc-render",
    "dvc-s3",
    "dvc-studio-client",
    "dvc-task",
    "entrypoints",
    "exceptiongroup",
    "executing",
    "fastapi",
    "fastjsonschema",
    "filelock",
    "flask",
    "flatten-dict",
    "flufl-lock",
    "fonttools",
    "from-root",
    "frozenlist",
    "fsspec",
    "funcy",
    "gitdb",
    "gitpython",
    "google-auth",
    "gql",
    "grandalf",
    "graphene",
    "graphql-core",
    "graphql-relay",
    "gto",
    "gunicorn",
    "h11",
    "halo",
    "httpcore",
    "httpx",
    "hydra-core",
    "idna",
    "importlib-metadata",
    "ipykernel",
    "ipython",
    "iterative-telemetry",
    "itsdangerous",
    "jedi",
    "jinja2",
    "jmespath",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter-client",
    "jupyter-core",
    "jupyterlab-pygments",
    "kiwisolver",
    "kombu",
    "log-symbols",
    "lxml",
    "mako",
    "markdown",
    "markdown-it-py",
    "markupsafe",
    "marshmallow",
    "matplotlib",
    "matplotlib-inline",
    "mdurl",
    "mistune",
    "mlflow==2.22.2",
    "mlflow-skinny",
    "multidict",
    "mypy-extensions",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "networkx",
    "nltk",
    "numpy",
    "omegaconf",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "orjson",
    "packaging",
    "pandas",
    "pandocfilters",
    "parso",
    "pathspec",
    "pathvalidate",
    "pexpect",
    "pillow",
    "pip",
    "platformdirs",
    "prometheus-client",
    "prompt-toolkit",
    "propcache",
    "protobuf",
    "psutil",
    "psycopg2-binary",
    "ptyprocess",
    "pure-eval",
    "pyarrow",
    "pyasn1",
    "pyasn1-modules",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydantic-settings",
    "pydot",
    "pygit2",
    "pygments",
    "pygtrie",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "pytz",
    "pyyaml",
    "pyzmq",
    "referencing",
    "regex",
    "requests",
    "requests-toolbelt",
    "rich",
    "rpds-py",
    "rsa",
    "ruamel-yaml",
    "ruamel-yaml-clib",
    "s3fs",
    "s3transfer",
    "scikit-learn",
    "scipy",
    "scmrepo",
    "semver",
    "setuptools",
    "shellingham",
    "shortuuid",
    "shtab",
    "six",
    "smmap",
    "sniffio",
    "soupsieve",
    "spinners",
    "sqlalchemy",
    "sqlparse",
    "sqltrie",
    "stack-data",
    "starlette",
    "tabulate",
    "tenacity",
    "termcolor",
    "threadpoolctl",
    "tinycss2",
    "tomli",
    "tomlkit",
    "tornado",
    "tqdm",
    "traitlets",
    "treelib",
    "typer",
    "typing-extensions",
    "typing-inspect",
    "typing-inspection",
    "tzdata",
    "urllib3",
    "uvicorn",
    "vine",
    "voluptuous",
    "wcwidth",
    "webencodings",
    "werkzeug",
    "wheel",
    "wrapt",
    "xgboost",
    "yarl",
    "zc-lockfile",
    "zipp",
]
